--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -10,3 +10,4 @@ RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY ./api .
 EXPOSE 8000
+CMD ["uvicorn" , "main:app" , "--reload" , "--workers" , "1" , "--host" , "0.0.0.0" , "--port" , "8000"]
