--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         - "DB_USER=root"
         - "DB_PASSWORD=root"
         - "DB_URL=db"
+        - "DB_NAME=gpeDb"
       volumes:
         - ./api:/app/
       networks:
