--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: 22
-          script: export ${{ secrets.NOMAD_KEY }} && ls /home/GPE
+          script: export NOMAD_TOKEN=${{ secrets.NOMAD_KEY }} && ls /home/GPE
