--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,10 @@ services:
         - "DB_URL=db"
         - "DB_PORT=4406"
         - "DB_NAME=gpeDb"
+        - "JWT_SECRET_KEY=GPEJWTNON"
+        - "JWT_REFRESH_SECRET_KEY=GPEJWTNON"
       volumes:
-        - ./api:/app/
+        - ./api:/api/
       networks:
         - gpe-net
 
