--- a/databases/Dockerfile
+++ b/databases/Dockerfile
@@ -1,3 +1,3 @@
 FROM mariadb:latest
 
-ADD ./databases/init.sql /docker-entrypoint-initdb.d/
+COPY ./databases/init.sql /docker-entrypoint-initdb.d/1.sql
